package core.Customer.domain.ValueObjects;

public class Address {
}
