package core.Customer.domain.ValueObjects;

public enum CustomerStatus {
}
