package core.Customer.domain.ValueObjects;

public enum CustomerType {
}
