@startuml
set separator none

package "Domain" #DDDDDD {

    package "DTO" #DDDDDD {
        class CustomerDTO <<DTO>> {
        }

        class CustomerRepresentativeDTO <<DTO>> {
        }
    }

    package "Mapper" #DDDDDD {
        class CustomerListMapper <<Mapper>> {
            + toDTO(customer) : CustomerDTO
            + customersToDTO(customers) : List<CustomerDTO>
        }

        class CustomerRepresentativeListMapper <<Mapper>> {
            + toDTO(representative) : CustomerRepresentativeDTO
            + representativesToDTO(representatives) : List<CustomerRepresentativeDTO>
        }
    }

    package "Repository " #DDDDDD {
        Interface CustomerRepository <<Repository>> {
            + getCustomers() : List<Customer>
            + getRepresentativesOfCustomer(customer, representative): List<CustomerRepresentative>
            + editEmailOfRepresentative(representative, email)
            + editPhoneNumberOfRepresentative(representative, phoneNumber)
        }

        Interface RepositoryFactory <<Factory>> {
            - RepositoryFactory()
            + getCustomerRepository() : CustomerRepository
        }

        Interface Repository <<Repository>> {
            + save(entity T) : T
            + delete(entity T)
            + findById(id: String) : T
            + findAll() : List<T>
            + deleteById(id: ID)
            + count() : long
        }
    }

    class Customer <<Entity>> {
        + Customer(name, address, vat, status, type)
    }

    class CustomerRepresentative <<Entity>> {
        + CustomerRepresentative(name, position, email, phoneNumber)
        + setEmail(email)
        + setPhoneNumber(phoneNumber)
    }

    class Address <<Value Object>> {
    }

    class VatNumber <<Value Object>> {
    }

    enum CustomerStatus <<Value Object>> {
    }

    enum CustomerType <<Value Object>> {
    }

    class Position <<Value Object>> {
    }

    class Name <<Value Object>> {
    }

    class Email <<Value Object>> {
    }

    class PhoneNumber <<Value Object>> {
    }

    enum CustomerRepresentativeStatus <<Value Object>> {
    }
}

package "UI" #DDDDDD {
    class EditCustomerRepresentativeUI <<UI>> {
    }
}

package "Controller" #DDDDDD {
    class EditCustomerRepresentativeController <<Controller>> {
        + listRepresentativesOfAGivenCustomer(customer)
        + listAllCustomers()
        + EditInformationOfACustomerRepresentative(email, phoneNumber)
    }
}

package "persistence.impl.jpa" #DDDDDD {
    class JpaCustomerRepository <<Repository>> {
    }

    class JpaRepositoryFactory <<Factory>> {
        - JpaRepositoryFactory()
        + getInstance() : RepositoryFactory
    }
}

package "persistence.impl.inmemory" #DDDDDD {
    class InMemoryCustomerRepository <<Repository>> {
    }

    class InMemoryRepositoryFactory <<Factory>> {
        - InMemoryRepositoryFactory()
        + getInstance() : RepositoryFactory
    }
}

package "persistence" #DDDDDD {
    class PersistenceContext {
        getRepositoryFactory() : RepositoryFactory
    }
}

' Relationships
Customer --> "1..*" CustomerRepresentative : representative
Customer --> "1" VatNumber : vat
Customer --> "1" Address : address
Customer --> "1" CustomerStatus : status
Customer --> "1" CustomerType : type
Customer ----> "1" Name : name

CustomerRepresentative --> "1" Position : position
CustomerRepresentative --> "1" Name : name
CustomerRepresentative --> "1" Email : email
CustomerRepresentative --> "1" PhoneNumber : phoneNumber
CustomerRepresentative --> "1" CustomerRepresentativeStatus : status

RepositoryFactory ..> CustomerRepository : getCustomerRepository()
CustomerRepository --> "0..*" Customer : customers

EditCustomerRepresentativeUI ..> EditCustomerRepresentativeController

EditCustomerRepresentativeController ..> RepositoryFactory : getCustomerRepository()
EditCustomerRepresentativeController ..> CustomerRepository : customerRepository
EditCustomerRepresentativeController ..> CustomerListMapper : customerListDTO
EditCustomerRepresentativeController ..> CustomerRepresentativeListMapper : customerRepresentativeListDTO
EditCustomerRepresentativeController ..> PersistenceContext : getRepositoryFactory()

CustomerDTO ..> CustomerListMapper : customerDTO
CustomerRepresentativeDTO ..> CustomerRepresentativeListMapper : customerRepresentativeDTO

PersistenceContext ..> JpaRepositoryFactory : getInstance()
PersistenceContext ..> InMemoryRepositoryFactory : getInstance()
PersistenceContext ..> RepositoryFactory : getCustomerRepository()

JpaRepositoryFactory ...|> RepositoryFactory : getCustomerRepository()
JpaRepositoryFactory ..> JpaCustomerRepository
JpaRepositoryFactory --> JpaRepositoryFactory : instance

InMemoryRepositoryFactory .|> RepositoryFactory : getCustomerRepository()
InMemoryRepositoryFactory ..> InMemoryCustomerRepository
InMemoryRepositoryFactory --> InMemoryRepositoryFactory : instance

JpaCustomerRepository ..|> CustomerRepository : getCustomers()
InMemoryCustomerRepository ..|> CustomerRepository : getCustomers()

CustomerRepository ..|> Repository

@enduml
